force-app/main/default/objects/Lead/fields/EstimatedMortgageInsuranceScenario1__c.field-meta.xml
<CustomField>
    <fullName>EstimatedMortgageInsuranceScenario1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated Mortgage Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>