force-app/main/default/objects/Lead/fields/Fico__c.field-meta.xml
<CustomField>
    <fullName>Fico__c</fullName>
    <label>Fico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>