force-app/main/default/objects/Lead/fields/First_Loan_Amount_Scenario_3__c.field-meta.xml
<CustomField>
    <fullName>First_Loan_Amount_Scenario_3__c</fullName>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>