force-app/main/default/objects/Lead/fields/First_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>First_Mortgage__c</fullName>
    <label>First Mortgage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>