force-app/main/default/objects/Lead/fields/First_Time_Homebuyer__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Homebuyer__c</fullName>
    <label>First Time Homebuyer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>