force-app/main/default/objects/Lead/fields/Future_Activities__c.field-meta.xml
<CustomField>
    <fullName>Future_Activities__c</fullName>
    <formula>Future_Tasks__c + Future_Events__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Activities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>