force-app/main/default/objects/Lead/fields/Future_Events__c.field-meta.xml
<CustomField>
    <fullName>Future_Events__c</fullName>
    <label>Future Events</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>