force-app/main/default/objects/Lead/fields/Future_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Future_Tasks__c</fullName>
    <label>Future Tasks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>