force-app/main/default/objects/Lead/fields/Greeting_Name__c.field-meta.xml
<CustomField>
    <fullName>Greeting_Name__c</fullName>
    <formula>if(not(isblank( Nickname__c )),  Nickname__c , FirstName )</formula>
    <label>Greeting Name</label>
    <type>Text</type>
</CustomField>