force-app/main/default/objects/Lead/fields/HasTCPAConsent__c.field-meta.xml
<CustomField>
    <fullName>HasTCPAConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has TCPA Consent</label>
    <type>Checkbox</type>
</CustomField>