force-app/main/default/objects/Lead/fields/Hazard_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Insurance__c</fullName>
    <label>Hazard Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>