force-app/main/default/objects/Lead/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <label>H Phone</label>
    <type>Phone</type>
</CustomField>