force-app/main/default/objects/Lead/fields/Household_Income_Range__c.field-meta.xml
<CustomField>
    <fullName>Household_Income_Range__c</fullName>
    <label>Household Income Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$0 - $25,000</fullName>
            </value>
            <value>
                <fullName>$25,000 - $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000 - $100,000</fullName>
            </value>
            <value>
                <fullName>$100,000 - $150,000</fullName>
            </value>
            <value>
                <fullName>$150,000 - $250,000</fullName>
            </value>
            <value>
                <fullName>More than $250,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>