force-app/main/default/objects/Lead/fields/Impounds__c.field-meta.xml
<CustomField>
    <fullName>Impounds__c</fullName>
    <label>Impounds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>