force-app/main/default/objects/Lead/fields/Last_Completed_Activity_Text__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Activity_Text__c</fullName>
    <label>Last Completed Activity Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>