force-app/main/default/objects/Lead/fields/Late_Mtg_Payments__c.field-meta.xml
<CustomField>
    <fullName>Late_Mtg_Payments__c</fullName>
    <label>Late Mtg Payments</label>
    <length>30</length>
    <type>Text</type>
</CustomField>