force-app/main/default/objects/Lead/fields/Lead_Gen_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Gen_Id__c</fullName>
    <label>Lead Gen Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>