force-app/main/default/objects/Lead/fields/Lead_Source_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Notes__c</fullName>
    <label>Lead Source Notes</label>
    <type>TextArea</type>
</CustomField>