force-app/main/default/objects/Lead/fields/Lead_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Zone__c</fullName>
    <description>Used to schedule VM drops at appropriate hours.  Please use Mountain Time for Arizona.</description>
    <label>Lead Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Pacific</fullName>
                <default>true</default>
                <label>Pacific</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>