force-app/main/default/objects/Lead/fields/Lead_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Lead_Timestamp__c</fullName>
    <label>Lead Timestamp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>