force-app/main/default/objects/Lead/fields/LeadAge__c.field-meta.xml
<CustomField>
    <fullName>LeadAge__c</fullName>
    <label>Lead Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>