force-app/main/default/objects/Lead/fields/LeadAgeText__c.field-meta.xml
<CustomField>
    <fullName>LeadAgeText__c</fullName>
    <label>Lead Age</label>
    <length>5</length>
    <type>Text</type>
</CustomField>