force-app/main/default/objects/Lead/fields/LeadNo__c.field-meta.xml
<CustomField>
    <fullName>LeadNo__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>