force-app/main/default/objects/Lead/fields/LeadNote__c.field-meta.xml
<CustomField>
    <fullName>LeadNote__c</fullName>
    <label>Lead Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>