force-app/main/default/objects/Lead/fields/Lifetime_Savings_Scenario_3__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Savings_Scenario_3__c</fullName>
    <formula>Current_Payment__c * (Maturity_Reduction_Scenario_3__c *12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>