force-app/main/default/objects/Lead/fields/Liquid_Assets__c.field-meta.xml
<CustomField>
    <fullName>Liquid_Assets__c</fullName>
    <inlineHelpText>Checking, savings, investments, or other acessible after-tax funds.</inlineHelpText>
    <label>Liquid Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>