force-app/main/default/objects/Lead/fields/LMB_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>LMB_Mailing_City__c</fullName>
    <label>LMB Mailing City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>