force-app/main/default/objects/Lead/fields/LMB_Mailing_St__c.field-meta.xml
<CustomField>
    <fullName>LMB_Mailing_St__c</fullName>
    <label>LMB Mailing State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>