force-app/main/default/objects/Lead/fields/LMB_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>LMB_Mailing_Street__c</fullName>
    <label>LMB Mailing Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>