force-app/main/default/objects/Lead/fields/LMB_Mailing_Zip__c.field-meta.xml
<CustomField>
    <fullName>LMB_Mailing_Zip__c</fullName>
    <label>LMB Mailing Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>