force-app/main/default/objects/Lead/fields/Loan_Amt_Range_Refi__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amt_Range_Refi__c</fullName>
    <label>Loan Amt Range (Refi)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$100,000 or less</fullName>
            </value>
            <value>
                <fullName>$100,001 - $250,000</fullName>
            </value>
            <value>
                <fullName>$250,001 - $453,100</fullName>
            </value>
            <value>
                <fullName>$453,101 - $679,650</fullName>
            </value>
            <value>
                <fullName>$679,651 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>