force-app/main/default/objects/Lead/fields/Loan_Originator_User__c.field-meta.xml
<CustomField>
    <fullName>Loan_Originator_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Originator User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LO_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>