force-app/main/default/objects/Lead/fields/Loan_Program__c.field-meta.xml
<CustomField>
    <fullName>Loan_Program__c</fullName>
    <label>Loan Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CF30</fullName>
            </value>
            <value>
                <fullName>CF25</fullName>
            </value>
            <value>
                <fullName>CF20</fullName>
            </value>
            <value>
                <fullName>CF15</fullName>
            </value>
            <value>
                <fullName>CF10</fullName>
            </value>
            <value>
                <fullName>HB30</fullName>
            </value>
            <value>
                <fullName>HB25</fullName>
            </value>
            <value>
                <fullName>HB20</fullName>
            </value>
            <value>
                <fullName>HB15</fullName>
            </value>
            <value>
                <fullName>HB10</fullName>
            </value>
            <value>
                <fullName>JF30</fullName>
            </value>
            <value>
                <fullName>JF15</fullName>
            </value>
            <value>
                <fullName>FHA 30</fullName>
            </value>
            <value>
                <fullName>FHA 15</fullName>
            </value>
            <value>
                <fullName>VA 30</fullName>
            </value>
            <value>
                <fullName>VA 15</fullName>
            </value>
            <value>
                <fullName>C 3-1 ARM</fullName>
            </value>
            <value>
                <fullName>C 5-1 ARM</fullName>
            </value>
            <value>
                <fullName>C 7-1 ARM</fullName>
            </value>
            <value>
                <fullName>C 10-1 ARM</fullName>
            </value>
            <value>
                <fullName>H 3-1 ARM</fullName>
            </value>
            <value>
                <fullName>H 5-1 ARM</fullName>
            </value>
            <value>
                <fullName>H 7-1 ARM</fullName>
            </value>
            <value>
                <fullName>H 10-1 ARM</fullName>
            </value>
            <value>
                <fullName>J 3-1 ARM</fullName>
            </value>
            <value>
                <fullName>J 5-1 ARM</fullName>
            </value>
            <value>
                <fullName>J 7-1 ARM</fullName>
            </value>
            <value>
                <fullName>J 10-1 ARM</fullName>
            </value>
            <value>
                <fullName>FHA 5-1 ARM</fullName>
            </value>
            <value>
                <fullName>VA 5-1 ARM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>