force-app/main/default/objects/Lead/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONV</fullName>
            </value>
            <value>
                <fullName>FHA</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>USDA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Heloc</fullName>
            </value>
            <value>
                <fullName>ARM (BB)</fullName>
            </value>
            <value>
                <fullName>Reverse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>