force-app/main/default/objects/Lead/fields/LoanDesignation__c.field-meta.xml
<CustomField>
    <fullName>LoanDesignation__c</fullName>
    <label>Loan Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>