force-app/main/default/objects/Lead/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <formula>IF(ISPICKVAL(Purpose__c,&quot;Purchase&quot;),(Estimated_Value__c  -  Down_Payment__c) /  Estimated_Value__c , Loan_Amount__c  /  Estimated_Value__c)</formula>
    <label>LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>