force-app/main/default/objects/Lead/fields/Military__c.field-meta.xml
<CustomField>
    <fullName>Military__c</fullName>
    <label>Military</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>