force-app/main/default/objects/Lead/fields/Mo_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Mo_Expenses__c</fullName>
    <label>Mo Expenses</label>
    <length>50</length>
    <type>Text</type>
</CustomField>