force-app/main/default/objects/Lead/fields/Monthly_Payment_Savings__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Savings__c</fullName>
    <formula>Current_Payment__c -  Monthly_Payment_Scenario_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Payment Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>