force-app/main/default/objects/Lead/fields/Monthly_Payment_Scenario_1__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Scenario_1__c</fullName>
    <formula>First_Loan_Amount_Scenario_1__c *(  Rate_Scenario_1__c /12)*((1+(  Rate_Scenario_1__c /12))^  (Term_Due__c * 12)) /(((1+(  Rate_Scenario_1__c /12))^  (Term_Due__c * 12)) -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>