force-app/main/default/objects/Lead/fields/Mortgage_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Insurance__c</fullName>
    <label>Mortgage Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>