force-app/main/default/objects/Lead/fields/NetRentTotal__c.field-meta.xml
<CustomField>
    <fullName>NetRentTotal__c</fullName>
    <formula>BorrowerNetRent__c + CoBorrowerNetRent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Rent Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>