force-app/main/default/objects/Lead/fields/Next_Due_Activity__c.field-meta.xml
<CustomField>
    <fullName>Next_Due_Activity__c</fullName>
    <description>Rollup Helper Adds Min Open Activity Date</description>
    <inlineHelpText>Rollup Helper Adds Min Open Activity Date</inlineHelpText>
    <label>Next Due Activity</label>
    <type>Date</type>
</CustomField>