force-app/main/default/objects/Lead/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <label>Nickname</label>
    <length>25</length>
    <type>Text</type>
</CustomField>