force-app/main/default/objects/Lead/fields/Number_of_Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payments_Made__c</fullName>
    <formula>(MONTH(TODAY()) + (12*(YEAR(TODAY() )-YEAR( First_Payment_Date__c ))) - MONTH( First_Payment_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Payments Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>